--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,10 +1,54 @@
 body {
     background-image: url(letter_images/sliceCtransp.png);
     background-repeat: no-repeat;
-    background-position: 0em -7em;
-    background-size: cover;
-    margin-bottom: 0;     
+    background-position:center;
+    background-size: 1425px 970px;
+    margin-bottom: 0;   
 } 
+
+.extra1 {
+    height: 100vh;
+    width: 200px;
+    position: absolute;
+    top: 0em;
+    left: 0em;
+    background-color: #F2DABD;
+    z-index: -1;
+}
+
+.extra2 {
+    height: 200px;
+    width:100vw;
+    position: absolute;
+    bottom: 0em;
+    left: 0em;
+    background-color: #F2DABD;
+    z-index: 2;
+}
+
+/*.extra3 {
+    height: 10px;
+    width:100vw;
+    position: absolute;
+    top: 0em;
+    left: 0em;
+    background-color: #F2DABD;
+    z-index: 2;
+}*/
+
+.extra4 {
+    height: 100vh;
+    width: 200px;
+    position: absolute;
+    top: 0em;
+    right: 0em;
+    background-color: #F2DABD;
+    z-index: -1; 
+}
+
+.wrapper {
+    /*background-color: #F2DABD;*/
+}
 
 nav {
     position: absolute;
@@ -33,22 +77,47 @@ h1 {
 #c {
     position: absolute;
     top: 1em;
-    left: -10em;
+    left: 0em;
     z-index: 50;
+    animation-name: capp;
+    animation-duration: 8s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+    z-index: 100000;
+}
+
+@keyframes capp {
+    0% { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 #d { 
     position:absolute;
-    top: 24em;
-    left: 14em;
+    top: 21em;
+    left: 17em;
     z-index: 50;
-    /*display: none;*/
-} 
+    animation-name: dapp;
+    animation-duration: 8s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+    z-index: 100000;
+}
+
+@keyframes dapp {
+    0% { opacity: 0; }
+	100% { opacity: 1; }
+}
 
 #dt {
     position:absolute;
     top: 14em;
-    left: 3em;
+    left: 9em;
     animation-name: westward1;
     animation-duration: 8s;
     animation-delay: 1s;
@@ -61,21 +130,32 @@ h1 {
 
 @keyframes westward1 {
     0% { left: 150em; top: -50em; transform: scale(0.0); }
-	100% { left: 3em; top: 14em; transform: scale(1.0); }
+	100% { left: 9em; top: 14em; transform: scale(1.0); }
 }
 
 #j {
     position:absolute;
-    top: 28em;
+    top: 22em;
     left: 37em;
     z-index: 50;
-    /*display: none;*/
+    animation-name: japp;
+    animation-duration: 8s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+    z-index: 100000;
 }
 
+@keyframes japp {
+    0% { opacity: 0; }
+	100% { opacity: 1; }
+}
 #jt {
     position: absolute;
-    top: 26em;
-    left: 15.5em;
+    top: 21em;
+    left: 20.5em;
     z-index: -3;
     margin-bottom: 0;
     animation-name: northward1;
@@ -88,21 +168,33 @@ h1 {
 
 @keyframes northward1 {
     0% { left: -10em; top: 101em; transform: scale(3); }
-	100% { left: 15.5em; top: 26em; transform: scale(1.0); }
+	100% { left: 20.5em; top: 21em; transform: scale(1.0); }
 }
 
 #e {
     position:absolute;
-    top: 28.5em;
-    left: 59em;
+    top: 23em;
+    left: 54em;
     z-index: 10;
-    /*display: none;*/
+    animation-name: eapp;
+    animation-duration: 8s;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+    z-index: 100000;
+}
+
+@keyframes eapp {
+    0% { opacity: 0; }
+	100% { opacity: 1; }
 }
 
 #et {
     position:absolute;
-    top: 19em;
-    left: 56em;
+    top: 16em;
+    left: 52em;
     animation-name: eastward1;
     animation-duration: 8s;
     animation-delay: 1s;
@@ -113,14 +205,13 @@ h1 {
 
 @keyframes eastward1 {
     0% { left: -50em; top: 35em; transform: scale(0); }
-	100% { left: 56em; top: 19em; transform: scale(1.0); }
+	100% { left: 52em; top: 16em; transform: scale(1.0); }
 }
 
 #dblug {
     width: 80px;
     height: 200px;
     background-color: #377D8C;
-    /*background-color: #FFA46C;*/
     position: absolute;
     top: 20em;
     left:0em;
@@ -210,5 +301,6 @@ h1 {
      z-index: -3; 
      display: none;
  }
+ 
  
  
