--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(letter_images/sliceCtransp.png);
+    background-image: url(letter_images/superC2.png);
     background-repeat: no-repeat;
     background-position:center;
     background-size: 1425px 970px;
