--- a/dimistyles.css
+++ b/dimistyles.css
@@ -6,7 +6,7 @@ body {
     margin-bottom: 0;   
 } 
 
-.extra1 {
+/*.extra1 {
     height: 100vh;
     width: 200px;
     position: absolute;
@@ -44,7 +44,7 @@ body {
     right: 0em;
     background-color: #F2DABD;
     z-index: -1; 
-}
+}*/
 
 .wrapper {
     /*background-color: #F2DABD;*/
