--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,10 +1,17 @@
 body {
     background-image: url(letter_images/superC2.png);
     background-repeat: no-repeat;
-    background-position:center;
-    background-size: 1425px 970px;
-    margin-bottom: 0;   
+    background-size: cover;
+    background-position: center;
+    
+    
+    
 } 
+
+nav {
+    position: absolute;
+    
+}
 
 /*.extra1 {
     height: 100vh;
@@ -25,16 +32,6 @@ body {
     background-color: #F2DABD;
     z-index: 2;
 }
-
-/*.extra3 {
-    height: 10px;
-    width:100vw;
-    position: absolute;
-    top: 0em;
-    left: 0em;
-    background-color: #F2DABD;
-    z-index: 2;
-}*/
 
 .extra4 {
     height: 100vh;
@@ -65,7 +62,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-} most
+}
 
 #centerbox {
     width: 1200px;
@@ -301,6 +298,5 @@ h1 {
      z-index: -3; 
      display: none;
  }
- 
  
  
