--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(letter_images/superC3.png);
     background-repeat: no-repeat;
-    
+    background-size: cover;
     background-position: center;
     
     
