--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(letter_images/superC2.png);
+    background-image: url(letter_images/superC.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
