--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(letter_images/biggerC.png);
+    background-image: url(letter_images/giveupC.png);
     background-repeat: no-repeat;
     background-size: cover;
     
