--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1,7 +1,9 @@
 body {
-    background-image: url(letter_images/giveupC.png);
+    background-image: url(letter_images/extraC7.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    
     
     
     
@@ -73,7 +75,7 @@ h1 {
 
 #c {
     position: absolute;
-    top: 1em;
+    top: 5em;
     left: 0em;
     z-index: 50;
     animation-name: capp;
@@ -93,7 +95,7 @@ h1 {
 
 #d { 
     position:absolute;
-    top: 21em;
+    top: 23em;
     left: 17em;
     z-index: 50;
     animation-name: dapp;
@@ -113,7 +115,7 @@ h1 {
 
 #dt {
     position:absolute;
-    top: 14em;
+    top: 16em;
     left: 9em;
     animation-name: westward1;
     animation-duration: 8s;
@@ -127,12 +129,12 @@ h1 {
 
 @keyframes westward1 {
     0% { left: 150em; top: -50em; transform: scale(0.0); }
-	100% { left: 9em; top: 14em; transform: scale(1.0); }
+	100% { left: 9em; top: 16em; transform: scale(1.0); }
 }
 
 #j {
     position:absolute;
-    top: 22em;
+    top: 24em;
     left: 37em;
     z-index: 50;
     animation-name: japp;
@@ -151,7 +153,7 @@ h1 {
 }
 #jt {
     position: absolute;
-    top: 21em;
+    top: 23em;
     left: 20.5em;
     z-index: -3;
     margin-bottom: 0;
@@ -165,12 +167,12 @@ h1 {
 
 @keyframes northward1 {
     0% { left: -10em; top: 101em; transform: scale(3); }
-	100% { left: 20.5em; top: 21em; transform: scale(1.0); }
+	100% { left: 20.5em; top: 23em; transform: scale(1.0); }
 }
 
 #e {
     position:absolute;
-    top: 23em;
+    top: 25em;
     left: 54em;
     z-index: 10;
     animation-name: eapp;
@@ -190,7 +192,7 @@ h1 {
 
 #et {
     position:absolute;
-    top: 16em;
+    top: 18em;
     left: 52em;
     animation-name: eastward1;
     animation-duration: 8s;
@@ -202,7 +204,7 @@ h1 {
 
 @keyframes eastward1 {
     0% { left: -50em; top: 35em; transform: scale(0); }
-	100% { left: 52em; top: 16em; transform: scale(1.0); }
+	100% { left: 52em; top: 18em; transform: scale(1.0); }
 }
 
 #dblug {
