--- a/dimistyles.css
+++ b/dimistyles.css
@@ -3,11 +3,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
-    
-    
-    
-    
+    width: 100%;
+    height: 100%;   
 } 
 
 nav {
