--- a/dimistyles.css
+++ b/dimistyles.css
@@ -176,7 +176,7 @@ h1 {
 
 #dblug {
     width: 62%;
-    height: 250px;
+    height: 25%;
     background-color: #377D8C;
     position: absolute;
     top: 15em;
