--- a/dimistyles.css
+++ b/dimistyles.css
@@ -2,7 +2,7 @@ body {
     background-image: url(letter_images/slice2C.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     width: 100%;
     height: 100%;
     margin-top: 0;
