--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1075,6 +1075,26 @@ footer .footersection2 nav.nav2 ul li {
         
     }
 
+    footer .footersection1 a {
+        /*color: #f2dabd;*/
+        color: white;
+        font-size: 1.2em;
+    }
+    footer .footersection1 ul {
+        display: inline-block;
+        width: 22%;
+        
+    }
+
+    footer .footersection2 nav.nav2 ul li {
+        font-family: Optima, "Gill Sans", sans-serif;
+        font-size: 1.2em;
+        padding: 0;
+        margin: 0 3em 0 3em;
+        font-weight: bolder;
+        
+    }
+
     .wrapper {
         /*left: 10%;
         right: 10%;
