--- a/dimistyles.css
+++ b/dimistyles.css
@@ -426,7 +426,7 @@ span.slogan {
 
 #home #dblug {
     width: 57.8%;
-    height: 25%;
+    height: 250px;
     background-color: #377D8C;
     position: absolute;
     top: 3em;
