--- a/dimistyles.css
+++ b/dimistyles.css
@@ -425,7 +425,8 @@ span.slogan {
 }
 
 #home #dblug {
-    width: 57.8%;
+    
+    min-width: 57.8%;
     height: 250px;
     background-color: #377D8C;
     position: absolute;
@@ -1329,8 +1330,8 @@ footer .footersection2 nav.nav2 ul li {
     }
     
     #home #dblug {
-        width: 57.8%;
-        height: 10%;
+        width: 308px;
+        height: 10.5%;
         background-color: #377D8C;
         position: absolute;
         top: 6.5em;
