--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1040,6 +1040,250 @@ footer .footersection2 nav.nav2 ul li {
 
 }
 
+@media screen and (max-width: 1300px) {
+
+ #home footer {
+        width: 100vw;
+        border-top: 5px solid black;
+        /*border-left: 25px solid black;
+        border-right: 25px solid black;*/
+        z-index: 1000;
+        background-color: rgb(47, 79, 79, .64);
+        /*color: #f2dabd;*/
+        color: white;
+        clear: both;
+        position: absolute;
+        top: 54%;
+        margin-right: 0;
+        margin-left: 0;
+        margin-bottom: 0;
+        padding: 0;
+        
+    }
+
+#c {
+        width: 48%;
+        position: absolute;
+        top: 2em;
+        left: 1em;
+        z-index: 50;
+        opacity: 0;
+        animation-name: capp;
+        animation-duration: 1.5s;
+        animation-delay: 2.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 500;
+        padding: 0;
+    }
+    
+    #ct {
+        width: 48%;
+        position: absolute;
+        top: 2.5em;
+        left: 0.25em;
+        animation-name: capp;
+        animation-duration: 1.5s;
+        animation-delay: 2.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        padding: 0;
+        
+    }
+    
+    @keyframes capp {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+    
+    #d { 
+        width: 12%;
+        position:absolute;
+        top: 9em;
+        left: 8.25em;
+        z-index: 50;
+        animation-name: dapp;
+        animation-duration: 1.5s;
+        animation-delay: 1.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 150;
+        padding: 0;
+    }
+    
+    @keyframes dapp {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+    
+    #dt {
+        width: 20%;
+        position:absolute;
+        top: 6em;
+        left: 4.75em;
+        animation-name: westward1;
+        animation-duration: 1.5s;
+        animation-delay: 1.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        z-index: 105;
+        border-top-right-radius: 50%;
+        padding: 0;
+        opacity: 0;
+    }
+    
+    @keyframes westward1 {
+        0% { opacity: 0; }
+	    100% { opacity: 1; }
+    }
+    
+    #j {
+        width: 7%;
+        position:absolute;
+        top: 10em;
+        left: 15.5em;
+        z-index: 50;
+        animation-name: japp;
+        animation-duration: 1.5s;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 500;
+        padding: 0;
+    }
+    
+    @keyframes japp {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+    #jt {
+        width: 20%;
+        position: absolute;
+        top: 9.5em;
+        left: 9.5em;
+        z-index: -3;
+        margin-bottom: 0;
+        animation-name: northward1;
+        animation-duration: 1.5s;
+        animation-delay: 2s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        z-index: 110;
+        opacity: 0;
+        border-bottom-right-radius: 50%;
+        padding: 0;
+    }
+    
+    @keyframes northward1 {
+        0% { opacity: 0; }
+        100% { opacity: .64; }
+    }
+    
+    #e {
+        width: 16%;
+        position:absolute;
+        top: 10em;
+        left: 22.5em;
+        z-index: 10;
+        animation-name: eapp;
+        animation-duration: 1.5s;
+        animation-delay: 2.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 500;
+        padding: 0;
+    }
+    
+    @keyframes eapp {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+    
+    #et {
+        width: 19%;
+        position:absolute;
+        top: 7em;
+        left: 21.5em;
+        animation-name: eastward1;
+        animation-duration: 1.5s;
+        animation-delay: 2.5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        border-top-left-radius: 50%;
+        padding: 0;
+        opacity: 0;
+    }
+    
+    @keyframes eastward1 {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+    }
+    
+    #home #dblug {
+        min-width: 38.7%;
+        height: 10.5%;
+        background-color: #377D8C;
+        position: absolute;
+        top: 6.5em;
+        left: 0;
+        opacity: 0;
+        z-index: -1;
+        animation-name: eastward2;
+        animation-duration: 1.5s;
+        animation-delay: .5s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        z-index:100;
+        border-top-left-radius: 25%;
+        padding: 0;
+        transform: scale(1);
+        
+    }
+    
+    @keyframes eastward2 {
+        0% { opacity: 0; }
+        100% { opacity: .64; }
+    }
+    
+     #lblug_t {
+         width: 17%;
+         height: 407px;
+         position: absolute;
+         left: 17.25em;
+         top: -5em;
+         opacity: 0;
+         animation-name: southward1;
+         animation-duration: 1.5s;
+         animation-delay: 1s;
+         animation-fill-mode: forwards;
+         animation-iteration-count: 1;
+         animation-timing-function: ease-in-out;
+         z-index: 199;
+         padding: 0;
+         border-bottom-right-radius: 50%;
+         
+     }
+     
+     @keyframes southward1 {
+        0% { opacity: 0; }
+        100% { opacity: 0.75; }
+     } 
+
+}
 
 @media screen and (max-width: 880px) {
     nav {
