--- a/dimistyles.css
+++ b/dimistyles.css
@@ -156,7 +156,7 @@ nav ul li {
 
 h1 {
     height: 5em;
-    margin-top: 0em;
+    margin-top: .25em;
     margin-bottom: 1em;
     /*background-image: url(letter_images/djcimage4.png);
     background-size: contain;
@@ -408,8 +408,8 @@ span.slogan {
 #et {
     width: 28%;
     position:absolute;
-    top: 35em;
-    left: -50em;
+    top: 8.7em;
+    left: 49.2em;
     animation-name: eastward1;
     animation-duration: 1.5s;
     animation-delay: 2.5s;
@@ -1053,7 +1053,7 @@ footer .footersection2 nav.nav2 ul li {
            color: white;
            clear: both;
            position: absolute;
-           top: 54%;
+           top: 70%;
            margin-right: 0;
            margin-left: 0;
            margin-bottom: 0;
@@ -1062,10 +1062,10 @@ footer .footersection2 nav.nav2 ul li {
        }
    
    #c {
-           width: 56.4%;
+           width: 52.9%;
            position: absolute;
-           top: 2em;
-           left: 1em;
+           top: -2em;
+           left: 10em;
            z-index: 50;
            opacity: 0;
            animation-name: capp;
@@ -1080,10 +1080,10 @@ footer .footersection2 nav.nav2 ul li {
        }
        
        #ct {
-           width: 56.4%;
+           width: 52.9%;
            position: absolute;
-           top: 2.5em;
-           left: 0.25em;
+           top: -1em;
+           left: 8.5em;
            animation-name: capp;
            animation-duration: 1.5s;
            animation-delay: 2.5s;
@@ -1103,8 +1103,8 @@ footer .footersection2 nav.nav2 ul li {
        #d { 
            width: 14.4%;
            position:absolute;
-           top: 9em;
-           left: 8.25em;
+           top: 11em;
+           left: 22em;
            z-index: 50;
            animation-name: dapp;
            animation-duration: 1.5s;
@@ -1125,8 +1125,8 @@ footer .footersection2 nav.nav2 ul li {
        #dt {
            width: 24%;
            position:absolute;
-           top: 6em;
-           left: 4.75em;
+           top: 5.4em;
+           left: 15.6em;
            animation-name: westward1;
            animation-duration: 1.5s;
            animation-delay: 1.5s;
@@ -1147,8 +1147,8 @@ footer .footersection2 nav.nav2 ul li {
        #j {
            width: 8%;
            position:absolute;
-           top: 10em;
-           left: 15.5em;
+           top: 11.8em;
+           left: 35.5em;
            z-index: 50;
            animation-name: japp;
            animation-duration: 1.5s;
@@ -1168,8 +1168,8 @@ footer .footersection2 nav.nav2 ul li {
        #jt {
            width: 24%;
            position: absolute;
-           top: 9.5em;
-           left: 9.5em;
+           top: 11em;
+           left: 25em;
            z-index: -3;
            margin-bottom: 0;
            animation-name: northward1;
@@ -1192,8 +1192,8 @@ footer .footersection2 nav.nav2 ul li {
        #e {
            width: 19.2%;
            position:absolute;
-           top: 10em;
-           left: 22.5em;
+           top: 12.2em;
+           left: 47.2em;
            z-index: 10;
            animation-name: eapp;
            animation-duration: 1.5s;
@@ -1214,8 +1214,8 @@ footer .footersection2 nav.nav2 ul li {
        #et {
            width: 22.4%;
            position:absolute;
-           top: 7em;
-           left: 21.5em;
+           top: 6.3em;
+           left: 45.7em;
            animation-name: eastward1;
            animation-duration: 1.5s;
            animation-delay: 2.5s;
@@ -1233,8 +1233,8 @@ footer .footersection2 nav.nav2 ul li {
        }
        
        #home #dblug {
-           min-width: 46.24%;
-           height: 10.5%;
+           min-width: 57.2%;
+           height: 187.5px;
            background-color: #377D8C;
            position: absolute;
            top: 6.5em;
@@ -1261,9 +1261,9 @@ footer .footersection2 nav.nav2 ul li {
        
         #lblug_t {
             width: 20%;
-            height: 407px;
+            height: 600px;
             position: absolute;
-            left: 17.25em;
+            left: 38.2em;
             top: -5em;
             opacity: 0;
             animation-name: southward1;
@@ -1284,6 +1284,7 @@ footer .footersection2 nav.nav2 ul li {
         } 
    
    }
+   
 
 @media screen and (max-width: 880px) {
     nav {
