--- a/dimistyles.css
+++ b/dimistyles.css
@@ -71,13 +71,13 @@ body#about, body#contact, body#gallery {
 
 /* NAVIGATION */
 
-nav {
-    width: 508px;
+header nav {
+    width: 512px;
     position: absolute;
-    top: 1em;
+    top: .25em;
     left: 22em;
     z-index: 505;
-    padding: 0em 0em 1em 0;
+    padding: 0em 0em 0em 0;
     
 } 
 
@@ -91,6 +91,7 @@ nav {
 }*/
 
 nav ul {
+    margin-top: 1em;
     border-top: 5px solid #BFA288;
     border-bottom: 5px solid #BFA288;
     padding-top: .25em;
@@ -98,15 +99,17 @@ nav ul {
     position: relative;
     padding-left: 0;
     padding-right: 0;
-
+    width: 520px;
 }
 
 nav ul li.about {
-    margin-left: 1.5em;
+    margin-left: 1.8em;
 }
 
 nav a {
     text-decoration: none;
+    z-index: 1000;
+    
 }
 
 nav a:link, nav a:visited {
@@ -120,15 +123,30 @@ nav a:hover {
 
 nav ul li {
     display: inline;
-    font-size: 1.8em;
-    margin-right: 2.2em;
-    font-family: Optima, "Gill Sans", sans-serif;
+    font-size: 2em;
+    margin-right: 1em;
+    margin-left: 1em;
+    font-family: Optima, Arsenal, "Gill Sans" sans-serif;
     
 }
 
-.homelink {
+h1#logo a {
+    position: absolute;
+    top: 0.25em;
+    left: 1em;
+    background-image: url(letter_images/logo_djcdesign.png);
+    background-size:contain;
+    background-repeat:no-repeat;
+    z-index: 3000;
+    width: 314px;
+    height: 78px;
+    text-indent: -3000em;
+}
+
+.homelink  {
     display: block;
     font-size: 2em;
+    
 }
 
 #homewrapper {
@@ -155,39 +173,14 @@ nav ul li {
 }
 
 h1 {
-    height: 5em;
-    margin-top: .25em;
-    margin-bottom: 1em;
-    /*background-image: url(letter_images/djcimage4.png);
-    background-size: contain;
-    background-repeat: no-repeat;*/
-    position: absolute;
-    top: -.3em;
-    left: 1.2em;
-    z-index: 200;
-    
-}
-
-h1 a {
-    text-decoration: none;
-}
-
-#about h1 {
-    height: 5em;
-    margin-top: 0em;
-    margin-bottom: 1em;
-    /*background-image: url(letter_images/djcimage4.png);
-    background-size: contain;
-    background-repeat: no-repeat;*/
-    position: absolute;
-    top: -.3em;
-    left: 1.2em;
-    z-index: 200;
-    
+    padding-top: 0em;
+    text-indent: -3000em;
 }
 
 .binitials {
-    font-family: 'Zapfino';
+    font-style:italic;
+    padding-top: 0em;
+    font-family: serif;
     margin-right: .25em;
     font-size: 1.3em;
     /*-webkit-text-stroke: 1.5px darkslategray;*/
@@ -195,25 +188,30 @@ h1 a {
     color: transparent;
     text-shadow: 0px 4px rgb(47, 79, 79, .36);
     /*color:darkslategray;
-    text-shadow: 0px 4px 3.5px rgb(47, 79, 79, .36);*/   
+    text-shadow: 0px 4px 3.5px rgb(47, 79, 79, .36);*/ 
+   
+    
 }
 
 h1 span.design {
+    padding-top: 0em;
     font-style: italic;
-    font-family: 'Big Caslon';
+    font-family: serif;
     letter-spacing: 1px;
     font-size: .8em;
     display: inline-block;
-    transform: skewX(-15deg);
     -webkit-text-stroke: .8px darkslategray;
     color: transparent;
-    text-shadow: 0px 2px rgb(47, 79, 79, .12);   
+    text-shadow: 0px 2px rgb(47, 79, 79, .33);  
+    z-index: 2000;
+   
+    
 }
 
 #home h2 {
     position: relative;
     width: 350px;
-    font-family: Optima;
+    font-family: Optima, Arsenal, "Gill Sans", sans-serif;
     left: 3em;
     top: 9em;
     font-size: 1.5em;
@@ -713,7 +711,7 @@ span.slogan {
     width: 4em;
     margin-left: auto;
     margin-right: auto;
-    font-family: Optima, "Gill Sans", sans-serif;
+    font-family: Optima, Arsenal, "Gill Sans", sans-serif;
 }
 
 #gallery img {
@@ -737,7 +735,7 @@ span.slogan {
 }
 
 fieldset legend {
-    font-family: Jura, sans-serif;
+    font-family: Optima, Arsenal, "Gill Sans", sans-serif;
     font-size: 2em;
     padding: .5em;
     border: 3px solid darkslategray;
@@ -780,8 +778,8 @@ fieldset p {
 }
 
 fieldset label {
-    font-family: Arsenal, sans-serif;
-    font-size: 1.3em;
+    font-family: serif, Arsenal, Optima, "Gill Sans", sans-serif;
+    font-size: 1.5em;
     margin-right: 0em;
     margin-left: 0em;
     display:inline-block;
@@ -803,7 +801,7 @@ textarea {
 
 fieldset button {
     display: block;
-    font-family: sans-serif;
+    font-family: Optima, Arsenal, "Gill Sans", sans-serif;
     font-size: 2em;
     padding: .32em;
     margin-top: .5em;
@@ -871,10 +869,11 @@ footer .footersection1 a {
     color: white;
     font-size: 1.8em;
 }
+
 footer .footersection1 ul {
     display: inline-block;
-    width: 22%;
-    
+    width: 20.5%;
+    margin-left: 1.8em;
 }
 
 footer li {
@@ -988,8 +987,8 @@ footer .footersection2 nav.nav2 ul.nav2ul2 {
 
 
 footer .footersection2 nav.nav2 ul li {
-    font-family: Optima, "Gill Sans", sans-serif;
-    font-size: 1.8em;
+    font-family: Optima, Arsenal, "Gill Sans", sans-serif;
+    font-size: 1.6em;
     padding: 0;
     margin: 0 3em 0 3em;
     font-weight: bolder;
@@ -1028,13 +1027,13 @@ footer .footersection2 nav.nav2 ul li {
         
     }*/
     
-    footer .footersection2 nav.nav2 ul li {
-        font-family: Optima, "Gill Sans", sans-serif;
-        font-size: 1.8em;
+    /*footer .footersection2 nav.nav2 ul li {
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
+        font-size: 1em;
         padding: 0;
         margin: 0 2em 0 4em;
         font-weight: bolder; 
-    }
+    }*/
 
 
 
@@ -1053,7 +1052,7 @@ footer .footersection2 nav.nav2 ul li {
            color: white;
            clear: both;
            position: absolute;
-           top: 70%;
+           top: 72%;
            margin-right: 0;
            margin-left: 0;
            margin-bottom: 0;
@@ -1282,26 +1281,83 @@ footer .footersection2 nav.nav2 ul li {
            0% { opacity: 0; }
            100% { opacity: 0.75; }
         } 
+
+        footer .footersection1 ul {
+            display: inline-block;
+            width: 16%;
+            margin-left: 1.8em;
+        }
    
+        footer .footersection1 a {
+            /*color: #f2dabd;*/
+            color: white;
+            font-size: 1.4em;
+    
+    
+        }
+
    }
    
 
 @media screen and (max-width: 880px) {
-    nav {
+
+    h1#logo a {
+        position: absolute;
+        top: 0.25em;
+        left: 1em;
+        background-image: url(letter_images/logo_djcdesign.png);
+        background-size:contain;
+        background-repeat:no-repeat;
+        z-index: 3000;
+        width: 210px;
+        height: 52px;
+        text-indent: -3000em;
+    }
+
+/*h1#logo {
+    margin: 0 2em 1em 0;
+    position: absolute;
+    top: 0.5em;
+    left: 2em; 
+
+    }*/
+
+    #logo img {
+        width: 200px;
+    }
+
+    header nav  {
         width: 360px;
         position: absolute;
-        top: 2.5em;
+        top: 3em;
         left: 2.5em;
         z-index: 505;
         padding: 0em 0em 1em 0;
         
     } 
 
+    nav ul {
+        margin-top: 1em;
+        border-top: 5px solid #BFA288;
+        border-bottom: 5px solid #BFA288;
+        padding-top: .25em;
+        padding-bottom: .25em;
+        position: relative;
+        padding-left: 0;
+        padding-right: 0;
+        width: 382px;
+    }
+
+    nav ul li.about {
+        margin-left: 2.3em;
+    }
+
     nav ul li {
-        display: inline-block;
+        display: inline;
         font-size: 1.2em;
         margin-right: 2.2em;
-        font-family: Optima, "Gill Sans", sans-serif;
+        font-family: Optima, Arsenal, "Gill Sans" sans-serif;
+        
     }
 
     #home footer {
@@ -1328,6 +1384,7 @@ footer .footersection2 nav.nav2 ul li {
         color: white;
         font-size: 1.2em;
     }
+
     footer .footersection1 ul {
         display: inline-block;
         padding-right: 1em;
@@ -1336,7 +1393,7 @@ footer .footersection2 nav.nav2 ul li {
     }
 
     footer .footersection2 nav.nav2 ul li {
-        font-family: Optima, "Gill Sans", sans-serif;
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
         font-size: 1.2em;
         padding: 0;
         margin: 0 3em 0 3em;
@@ -1360,7 +1417,7 @@ footer .footersection2 nav.nav2 ul li {
     }
 
     .binitials {
-        font-family: 'Zapfino';
+        font-family: serif;
         margin-right: .25em;
         font-size: .8em;
         /*-webkit-text-stroke: 1.5px darkslategray;*/
@@ -1373,20 +1430,20 @@ footer .footersection2 nav.nav2 ul li {
     
     h1 span.design {
         font-style: italic;
-        font-family: 'Big Caslon';
+        font-family: serif;
         letter-spacing: 1px;
         font-size: .8em;
         display: inline-block;
         transform: skewX(-15deg);
         -webkit-text-stroke: .8px darkslategray;
         color: transparent;
-        text-shadow: 0px 2px rgb(47, 79, 79, .12);   
+        text-shadow: 0px 2px rgb(47, 79, 79, .33);   
     }
 
     #home h2 {
         position: relative;
         width: 350px;
-        font-family: Optima;
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
         left: 1em;
         top: 11em;
         font-size: .8em;
@@ -1584,7 +1641,7 @@ footer .footersection2 nav.nav2 ul li {
         height: 10.5%;
         background-color: #377D8C;
         position: absolute;
-        top: 6.5em;
+        top: 7.2em;
         left: 0;
         opacity: 0;
         z-index: -1;
@@ -1684,7 +1741,7 @@ footer .footersection2 nav.nav2 ul li {
     }
     
     footer .footersection2 nav.nav2 ul li {
-        font-family: Optima, "Gill Sans", sans-serif;
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
         font-size: 1.2em;
         padding: 0;
         margin: 0 2em 0 4em;
