--- a/dimistyles.css
+++ b/dimistyles.css
@@ -1390,7 +1390,7 @@ footer .footersection2 nav.nav2 ul li {
         display: inline-block;
         padding-right: 1em;
         margin-right: 1em;
-        
+        width: 25%;
     }
 
     footer .footersection2 nav.nav2 ul li {
