--- a/dimistyles.css
+++ b/dimistyles.css
@@ -793,6 +793,7 @@ textarea {
     height: 5em;
     font-size: 1em;
     padding: 1em 0em 1em 1em;
+    border: 1px solid black;
 }
 
 #contact p#comments {
