--- a/dimistyles.css
+++ b/dimistyles.css
@@ -287,7 +287,7 @@ span.slogan {
     width: 18%;
     position:absolute;
     top: 14em;
-    left: 19.8em;
+    left: 19.5em;
     z-index: 50;
     animation-name: dapp;
     animation-duration: 1.5s;
@@ -417,7 +417,7 @@ span.slogan {
 
 #home #dblug {
     
-    min-width: 57.8%;
+    min-width: 58%;
     height: 250px;
     background-color: #377D8C;
     position: absolute;
@@ -466,7 +466,6 @@ span.slogan {
     0% { opacity: 0; }
 	100% { opacity: 0.75; }
  }
-
 
  #about img#htmlvista {
      
@@ -981,20 +980,45 @@ footer .footersection2 nav.nav2 ul li {
     h1#logo a {
         position: absolute;
         top: 0.25em;
-        left: 1em;
+        left: 1.5em;
         background-image: url(letter_images/logo_djcdesign.png);
         background-size:contain;
         background-repeat:no-repeat;
         z-index: 3000;
         width: 251.8px;
-        height: 62.4px;
+        height: 56px;
         text-indent: -3000em;
+    }
+
+    #home h2 {
+        position: relative;
+        width: 350px;
+        font-family: Optima, Arsenal, "Gill Sans", sans-serif;
+        left: 1em;
+        top: 7em;
+        font-size: .8em;
+        color: #f2dabd;
+        z-index: 200;
+        animation-name: slogapp;
+        animation-duration: 1.5s;
+        animation-delay: 1s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in-out;
+        opacity: 0;
+        z-index: 510;
+        padding: 0;
+    }
+    
+    @keyframes slogapp {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
     }
     
     header nav {
         width: 512px;
         position: absolute;
-        top: .25em;
+        top: 0em;
         left: 18em;
         z-index: 505;
         padding: 0em 0em 0em 0;
@@ -1049,13 +1073,20 @@ footer .footersection2 nav.nav2 ul li {
         display: inline-block;
         width: 16%;
         margin-left: 1.8em;
+        padding-top: .5em;
+        padding-bottom: .5em;
+        margin-bottom: 0;
+        margin-top: 0;
     }
 
     footer .footersection1 a {
         /*color: #f2dabd;*/
         color: white;
         font-size: 1em;
-        
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 0;
+        margin-bottom: 0;
     }  
     
     footer .footersection2 nav.nav2 {
@@ -1120,8 +1151,8 @@ footer .footersection2 nav.nav2 ul li {
    #c {
            width: 42.3%;
            position: absolute;
-           top: -3em;
-           left: 16.3em;
+           top: -2.3em;
+           left: 14.8em;
            z-index: 50;
            opacity: 0;
            animation-name: capp;
@@ -1138,8 +1169,8 @@ footer .footersection2 nav.nav2 ul li {
        #ct {
            width: 42.3%;
            position: absolute;
-           top: -2em;
-           left: 14.8em;
+           top: -1.6em;
+           left: 13.6em;
            animation-name: capp;
            animation-duration: 1.5s;
            animation-delay: 2.5s;
@@ -1157,10 +1188,10 @@ footer .footersection2 nav.nav2 ul li {
        }
        
        #d { 
-           width: 14.4%;
+           width: 11.4%;
            position:absolute;
-           top: 11em;
-           left: 22em;
+           top: 7.7em;
+           left: 24.5em;
            z-index: 50;
            animation-name: dapp;
            animation-duration: 1.5s;
@@ -1179,10 +1210,10 @@ footer .footersection2 nav.nav2 ul li {
        }
        
        #dt {
-           width: 24%;
+           width: 18.15%;
            position:absolute;
-           top: 5.4em;
-           left: 15.6em;
+           top: 3.5em;
+           left: 20.1em;
            animation-name: westward1;
            animation-duration: 1.5s;
            animation-delay: 1.5s;
@@ -1201,10 +1232,10 @@ footer .footersection2 nav.nav2 ul li {
        }
        
        #j {
-           width: 8%;
+           width: 6.375%;
            position:absolute;
-           top: 11.8em;
-           left: 35.5em;
+           top: 8.5em;
+           left: 35em;
            z-index: 50;
            animation-name: japp;
            animation-duration: 1.5s;
@@ -1222,10 +1253,10 @@ footer .footersection2 nav.nav2 ul li {
            100% { opacity: 1; }
        }
        #jt {
-           width: 24%;
+           width: 19.125%;
            position: absolute;
-           top: 11em;
-           left: 25em;
+           top: 7.9em;
+           left: 26.5em;
            z-index: -3;
            margin-bottom: 0;
            animation-name: northward1;
@@ -1248,8 +1279,8 @@ footer .footersection2 nav.nav2 ul li {
        #e {
            width: 15.3%;
            position:absolute;
-           top: 8.3em;
-           left: 46em;
+           top: 8.8em;
+           left: 44.5em;
            z-index: 10;
            animation-name: eapp;
            animation-duration: 1.5s;
@@ -1270,8 +1301,8 @@ footer .footersection2 nav.nav2 ul li {
        #et {
            width: 17.9%;
            position:absolute;
-           top: 3.6em;
-           left: 44.9em;
+           top: 4.1em;
+           left: 43.4em;
            animation-name: eastward1;
            animation-duration: 1.5s;
            animation-delay: 2.5s;
@@ -1293,7 +1324,7 @@ footer .footersection2 nav.nav2 ul li {
            height: 150px;
            background-color: #377D8C;
            position: absolute;
-           top: 4.5em;
+           top: 4em;
            left: 0;
            opacity: 0;
            z-index: -1;
@@ -1812,4 +1843,6 @@ footer .footersection2 nav.nav2 ul li {
 
 
 }
+
+
 
