--- a/dimistyles.css
+++ b/dimistyles.css
@@ -872,6 +872,7 @@ footer .copyrightinfo {
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     position: relative;
+    bottom: 0%;
     z-index: 3000;
 }
 
@@ -1130,7 +1131,7 @@ footer .footersection2 nav.nav2 ul li {
         border-bottom-left-radius: 50px;
         border-bottom-right-radius: 50px;
         position: relative;
-        top: -1em;
+        bottom: 0%;
         z-index: 3000;
     }
    
@@ -1823,6 +1824,8 @@ footer .footersection2 nav.nav2 ul li {
 
 
 }
+
+
 
 
 
